# python-project-lvl2

./: Makefile  README.md  pyproject.toml  setup.cfg
gendiff/: __init__.py  file_parser.py  generate_diff.py  search_diff.py
gendiff/formatters/: formatter.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  gendiff_main.py
tests/: test_generate_diff.py
tests/fixtures/: boolean1.json  boolean2.json  boolean_result.txt  different_keys2.json  different_keys_result.txt  different_value1.json  different_value2.json  different_value_result.txt  gendiff_help.txt  inner_json1.json  inner_json_result.txt  inner_plain_result.txt  same_json_result.txt  same_json_result_cli.txt  sample_json1.json  sample_json2.json  sample_json_result.json  sample_json_result.txt  sample_yaml1.yaml  sample_yaml2.yml  sample_yaml_json_result.txt  sample_yaml_result.txt
