[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["ruffury <veliev.rufat@mail.ru>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
wemake-python-styleguide = "^0.16.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff_main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
